Fix build and subsequent functionality of the CUPS printer backend in GTK+.

PR:		116750
Obtained from:	http://bugzilla.gnome.org/show_bug.cgi?id=467414